--- a/tools/09_AWX-Installer/create-installer.yaml
+++ b/tools/09_AWX-Installer/create-installer.yaml
@@ -46,12 +46,12 @@ spec:
           - name: INSTALL_REPO
             value : "https://github.com/niklaushirt/cp4waiops-public.git"
           - name: SHOW_TOOLS
-            value : "true"
+            value : "false"
           - name: SHOW_ADDONS
             value : "true"
           - name: SHOW_CONFIG
-            value : "true"
+            value : "false"
           - name: SHOW_DEBUG
-            value : "true"
+            value : "false"
           - name: ENTITLED_REGISTRY_KEY
             value : "CHANGEME1234"
