--- a/ansible/roles/31_aimanager-patch-ingress/tasks/main.yml
+++ b/ansible/roles/31_aimanager-patch-ingress/tasks/main.yml
@@ -96,6 +96,8 @@
     fi
   register: certificate_patch
   ignore_errors: yes
+  args:
+    executable: /bin/bash
 
 
 - name: CERTIFICATES -           🟢 Patch AutomationUIConfig Certificates
