--- a/ansible/roles/35_aimanager-create-awx-connection/tasks/main.yml
+++ b/ansible/roles/35_aimanager-create-awx-connection/tasks/main.yml
@@ -99,6 +99,8 @@
   ignore_errors: yes
   when: CREATE_EXTERNAL_ROUTES == true
   register: output_string
+  args:
+    executable: /bin/bash
   
 - name: OUTPUT -          🟢 RESULT
   debug: 
