--- a/ansible/roles/83_aimanager-create-topology/tasks/main.yml
+++ b/ansible/roles/83_aimanager-create-topology/tasks/main.yml
@@ -78,6 +78,8 @@
 
   register: output_string
   ignore_errors: yes
+  args:
+    executable: /bin/bash
   
 - name: OUTPUT -          🟢 RESULT
   debug: 
