--- a/ansible/roles/84_aimanager-create-aiops-application/tasks/main.yml
+++ b/ansible/roles/84_aimanager-create-aiops-application/tasks/main.yml
@@ -129,6 +129,8 @@
     fi
   register: output_string
   ignore_errors: yes
+  args:
+    executable: /bin/bash
 
 - name: OUTPUT -                 🟢 RESULT
   debug: 
@@ -186,6 +188,8 @@
 
   register: output_string
   ignore_errors: yes
+  args:
+    executable: /bin/bash
 
 - name: OUTPUT -                 🟢 RESULT
   debug: 
