--- a/ansible/roles/86_aimanager-training-create-tg-configuration/tasks/main.yml
+++ b/ansible/roles/86_aimanager-training-create-tg-configuration/tasks/main.yml
@@ -36,6 +36,10 @@
 
   register: output_string
   ignore_errors: yes
+  args:
+    executable: /bin/bash
+
+    
 - name: TRAINING CREATE EVENTS - ✅ RESULT
   debug: 
     var: output_string.stdout_lines
