--- a/ansible/roles/88_aimanager-training-run-snow/tasks/main.yml
+++ b/ansible/roles/88_aimanager-training-run-snow/tasks/main.yml
@@ -31,6 +31,10 @@
 
   register: output_string
   ignore_errors: yes
+  args:
+    executable: /bin/bash
+
+    
 - name: TRAINING RUN SNOW -       ✅ RESULT
   debug: 
     var: output_string.stdout_lines
