--- a/ansible/roles/88_aimanager-training-run/tasks/main.yml
+++ b/ansible/roles/88_aimanager-training-run/tasks/main.yml
@@ -102,6 +102,10 @@
 
   register: output_string
   ignore_errors: yes
+  args:
+    executable: /bin/bash
+
+    
 - name: LOGIN -          🔐 WAIOPS
   debug: 
     var: output_string.stdout_lines
