--- a/ansible/roles/86_aimanager-training-create-metric-configuration/tasks/main.yml
+++ b/ansible/roles/86_aimanager-training-create-metric-configuration/tasks/main.yml
@@ -30,6 +30,8 @@
 
   register: output_string
   ignore_errors: yes
+  args:
+    executable: /bin/bash
 
 - name: TRAINING CREATE METRICS - ✅ RESULT
   debug: 
