--- a/tools/00_Quick_Install_Jobs/01_FVT_INSTALL_ALL.yaml
+++ b/tools/00_Quick_Install_Jobs/01_FVT_INSTALL_ALL.yaml
@@ -1,4 +1,16 @@
-
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: installer-default-default
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+  - kind: ServiceAccount
+    name: default
+    namespace: default
+---
 apiVersion: batch/v1
 kind: Job
 metadata:
