--- a/tools/00_Quick_Install_Jobs/01_INSTALL_ALL.yaml
+++ b/tools/00_Quick_Install_Jobs/01_INSTALL_ALL.yaml
@@ -47,7 +47,7 @@ spec:
               echo "------------------------------------------------------------------------------------------------------------------------------"
               echo " 📥 Clone Repo $INSTALL_REPO"
               git clone $INSTALL_REPO
-              cd cp4waiops-deployer
+              cd cp4waiops-public
               echo ""
               echo ""
 
